--- a/src/components/game.css
+++ b/src/components/game.css
@@ -1,4 +1,4 @@
-@media (max-width: 500px) {
+@media (max-width: 850px) {
 	.game {
 		flex-direction: column;
 		gap: 0;
@@ -7,32 +7,39 @@
 		font-size: 10px;
 	}
 	.item {
-		width: 50px;
-		height: 50px;
+		width: 75px;
+		height: 75px;
 		font-size: 2em;
-		box-shadow: 0 0 30px 1px red;
 	}
 	.container {
-		gap: 15px;
+		gap: 20px;
 	}
-	.zag {
-		color: white;
-		font-family: sans-serif;
-		font-size: 0.5em;
-	}
-	.check {
-		width: 10px;
-		height: 10px;
-		justify-self: center;
-	}
+	
+	
 	.btn {
 		font-size: 15px;
 		width: auto;
 		height: 30px;
 	}
-	
+	.h {
+		font-size: 10px;
+	}
+
+	.h-text {
+		font-size: 7em;
+	}
+
+	.btn__modal {
+		font-weight: 700;
+		font-size: 1em;
+		padding: 20px;
+	}
+	.text_isNext {
+		font-size: 2em;
+	}
+
 }
-@media (min-width: 500px) {
+@media (min-width: 850px) {
 	.game {
 		gap: 0;
 	}
@@ -46,42 +53,42 @@
 		width: 150px;
 		height: 150px;
 		font-size: 5em;
-		box-shadow: 0 0 30px 5px red;
 	}
 	.btn {
 		font-size: 0.5em;
 		width: 160px;
 		height: 60px;
 	}
-	.zag {
-		color: white;
-		font-family: sans-serif;
-		font-size: 5em;
+	.btn__modal {
+		font-weight: 700;
+		font-size: 2em;
+		padding: 20px;
 	}
-	.check {
-		width: 25px;
-		height: 25px;
-		justify-self: center;
+	.text_isNext {
+		font-size: 0.7em;
 	}
+	.h-text {
+		font-size: 10em;
+	}
+}
+
+.all_container {
+	display: grid;
+	height: 100vh;
 }
 
 :root {
 	--index: 1vh + 1vw;
 }
 
-.game {
-	width: 100%;
+.html, body {
 	height: 100vh;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
 }
 
-.content {
+.game {
 	width: 100%;
-	height: auto;
-	display: grid;
-	justify-content: center;
-	align-content: flex-start;
-	text-align: center;
+	display: flex;
+	justify-items: center;
+	align-items: center;
+	/* border: 1px solid blue; */
 }
